@startuml
' Focused ERD for populated, high-value tables only.
' Omitted zero-row tables: centers, media_files, teacher_profiles, writing_prompts, speaking_*, question_tags, question_statistics, and similar support tables.
' Omitted secondary populated tables for readability: test_settings, test_versions, test_share_links, full_test_progress.

left to right direction
skinparam linetype ortho
hide methods
hide stereotypes
hide circle

package "Identity & Access" {
  entity "roles" as roles {
    *id <<PK>>
    --
    name
  }

  entity "users" as users {
    *id <<PK>>
    --
    username
  }

  entity "user_roles" as user_roles {
    *id <<PK>>
    --
    user_id <<FK>>
    role_id <<FK>>
  }

  entity "student_profiles" as student_profiles {
    *id <<PK>>
    --
    user_id <<FK>>
  }

  entity "classes" as classes {
    *id <<PK>>
    --
    code
    name
  }

  entity "class_students" as class_students {
    *id <<PK>>
    --
    class_id <<FK>>
    user_id <<FK>>
  }

  entity "class_teachers" as class_teachers {
    *id <<PK>>
    --
    class_id <<FK>>
    user_id <<FK>>
  }
}

package "Test Structure" {
  entity "tests" as tests {
    *id <<PK>>
    --
    created_by <<FK>>
    reviewed_by <<FK>>
  }

  entity "sessions" as sessions {
    *id <<PK>>
  }

  entity "parts" as parts {
    *id <<PK>>
    --
    session_id <<FK>>
  }

  entity "test_sessions" as test_sessions {
    *id <<PK>>
    --
    test_id <<FK>>
    session_id <<FK>>
  }

  entity "test_parts" as test_parts {
    *id <<PK>>
    --
    test_session_id <<FK>>
    part_id <<FK>>
  }

  entity "question_types" as question_types {
    *id <<PK>>
  }

  entity "question_groups" as question_groups {
    *id <<PK>>
    --
    part_id <<FK>>
    question_type_id <<FK>>
  }

  entity "test_question_groups" as test_question_groups {
    *id <<PK>>
    --
    test_part_id <<FK>>
    question_group_id <<FK>>
  }

  entity "questions" as questions {
    *id <<PK>>
    --
    question_group_id <<FK>>
    question_type_id <<FK>>
  }

  entity "question_options" as question_options {
    *id <<PK>>
    --
    question_id <<FK>>
  }

  entity "answers" as answers {
    *id <<PK>>
    --
    question_id <<FK>>
  }
}

package "Attempts & Results" {
  entity "exam_attempts" as exam_attempts {
    *id <<PK>>
    --
    user_id <<FK>>
    test_id <<FK>>
    session_id <<FK>>
  }

  entity "attempt_answers" as attempt_answers {
    *id <<PK>>
    --
    exam_attempt_id <<FK>>
    question_id <<FK>>
  }

  entity "exam_attempt_grade_history" as exam_attempt_grade_history {
    *id <<PK>>
    --
    exam_attempt_id <<FK>>
    edited_by_user_id <<FK>>
  }

  entity "guest_exam_attempts" as guest_exam_attempts {
    *id <<PK>>
    --
    test_id <<FK>>
    session_id <<FK>>
  }
}

package "Writing" {
  entity "student_writing_submissions" as student_writing_submissions {
    *id <<PK>>
    --
    exam_attempt_id <<FK>>
    user_id <<FK>>
    graded_by <<FK>>
    question_group_id <<FK>>
  }

  entity "writing_submission_grade_history" as writing_submission_grade_history {
    *id <<PK>>
    --
    writing_submission_id <<FK>>
    edited_by_user_id <<FK>>
  }
}

package "Assignments" {
  entity "assignments" as assignments {
    *id <<PK>>
    --
    class_id <<FK>>
    created_by <<FK>>
  }

  entity "assignment_submissions" as assignment_submissions {
    *id <<PK>>
    --
    assignment_id <<FK>>
    user_id <<FK>>
    graded_by <<FK>>
  }
}

roles ||--o{ user_roles : role
users ||--o{ user_roles : user
users ||--|| student_profiles : profile
classes ||--o{ class_students : class
users ||--o{ class_students : student
classes ||--o{ class_teachers : class
users ||--o{ class_teachers : teacher

users ||--o{ tests : created_by
users ||--o{ tests : reviewed_by
tests ||--o{ test_sessions : includes
sessions ||--o{ test_sessions : used_in
sessions ||--o{ parts : contains
parts ||--o{ test_parts : part
test_sessions ||--o{ test_parts : test_session
question_types ||--o{ question_groups : type
parts ||--o{ question_groups : groups
test_parts ||--o{ test_question_groups : mapped_part
question_groups ||--o{ test_question_groups : mapped_group
question_groups ||--o{ questions : contains
question_types ||--o{ questions : type
questions ||--o{ question_options : options
questions ||--o{ answers : answers

users ||--o{ exam_attempts : attempts
tests ||--o{ exam_attempts : test
sessions ||--o{ exam_attempts : session
exam_attempts ||--o{ attempt_answers : answers
questions ||--o{ attempt_answers : question
exam_attempts ||--o{ exam_attempt_grade_history : history
users ||--o{ exam_attempt_grade_history : edited_by
tests ||--o{ guest_exam_attempts : test
sessions ||--o{ guest_exam_attempts : session

exam_attempts ||--o{ student_writing_submissions : writing_attempt
users ||--o{ student_writing_submissions : student
users ||--o{ student_writing_submissions : graded_by
question_groups ||--o{ student_writing_submissions : prompt_group
student_writing_submissions ||--o{ writing_submission_grade_history : history
users ||--o{ writing_submission_grade_history : edited_by

classes ||--o{ assignments : class
users ||--o{ assignments : created_by
assignments ||--o{ assignment_submissions : submissions
users ||--o{ assignment_submissions : student
users ||--o{ assignment_submissions : graded_by

@enduml
